# tactill

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release-please.yml  tests.yml
tactill/: __init__.py  data.py  exceptions.py  filters.py  mixin.py  tactill.py  types.py  utils.py
tactill/asynchronous/: articles.py  base.py  categories.py  movements.py  taxes.py
tactill/entities/: __init__.py  account.py  article.py  base.py  catalog.py  category.py  discount.py  movement.py  option.py  option_list.py  pack.py  response.py  tax.py
tactill/entities/catalog/: article.py  category.py  discount.py  option.py  pack.py  tax.py
tactill/entities/stock/: movement.py  stock.py
tactill/synchronous/: articles.py  base.py  categories.py  movements.py  taxes.py
tests/: conftest.py  test_articles.py  test_catalog.py  test_categories.py  test_client.py  test_filters.py  test_movements.py  test_taxes.py
tests/asynchronous/: test_articles.py  test_categories.py  test_movements.py  test_taxes.py
tests/cassettes/: test_get_articles_by_category_id.yaml  test_get_articles_by_created_at.yaml  test_get_articles_by_full_price.yaml  test_get_articles_by_name.yaml
tests/synchronous/: test_articles.py  test_categories.py  test_taxes.py
tests/test_catalog/: test_articles.py  test_categories.py  test_dicounts.py  test_discounts.py  test_option_lists.py  test_options.py  test_packs.py  test_taxes.py
tests/test_catalog/cassettes/: test_create_article.yaml  test_create_article_bad_request.yaml  test_create_category.yaml  test_create_category_bad_request.yaml  test_create_discount.yaml  test_create_option.yaml  test_create_option_bad_request.yaml  test_create_option_list.yaml  test_create_option_list_bad_request.yaml  test_create_pack.yaml  test_create_tax.yaml  test_create_tax_bad_request.yaml  test_get_article.yaml  test_get_article_bad_request.yaml  test_get_article_not_found.yaml  test_get_articles.yaml  test_get_articles_bad_request.yaml  test_get_articles_with_filter.yaml  test_get_articles_with_order.yaml  test_get_articles_with_skip.yaml  test_get_categories.yaml  test_get_categories_bad_request.yaml  test_get_categories_with_filter.yaml  test_get_categories_with_order.yaml  test_get_categories_with_skip.yaml  test_get_category.yaml  test_get_category_bad_request.yaml  test_get_category_not_found.yaml  test_get_discount.yaml  test_get_discount_bad_request.yaml  test_get_discount_not_found.yaml  test_get_discounts.yaml  test_get_discounts_bad_request.yaml  test_get_discounts_with_filter.yaml  test_get_discounts_with_order.yaml  test_get_discounts_with_skip.yaml  test_get_option.yaml  test_get_option_bad_request.yaml  test_get_option_list.yaml  test_get_option_list_bad_request.yaml  (+43 more)
tests/test_stock/: test_movements.py
tests/test_stock/cassettes/: test_create_movement_in.yaml  test_create_movement_out.yaml  test_get_movements.yaml  (+2 more)
