[project]
name = "tactill"
version = "0.9.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.13",
    "tenacity>=9.1",
]

[dependency-groups]
dev = [
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pydantic-settings>=2.14",
    "ruff==0.15.12",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF",
]
ignore = [
    "PLR0913", # Too many arguments in function definition
]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
markers = [
    "skip_on_ci",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
