[project]
name = "tactill"
# use dynamic version to avoid sync issues with uv.lock after 'release-please'
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.13.4",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pydantic-settings==2.14.1",
    "ruff==0.15.16",
    "ty==0.0.44",
    "pytest-asyncio==1.4.0",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF",
    "ANN", # flake8-annotations
]
ignore = [
    "PLR0913", # too-many-arguments
    "SIM117", # multiple-with-statements
]

[tool.ty.terminal]
output-format = "concise"

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "skip_on_ci",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
